# AI-DEVELOPMENT-TRACKER

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ea4916806888_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: content.py  feed.py  health.py  ingest.py  sources.py  sub_sources.py
backend/app/ingestion/: __init__.py  arxiv.py  base.py  github_trending.py  huggingface.py  registry.py  runner.py
backend/app/models/: __init__.py  content_item.py  feedback.py  filter_preset.py  source.py  source_change_log.py  sub_source.py
backend/app/schemas/: common.py  content.py  feed.py  source.py
backend/app/scoring/: __init__.py  ranker.py
backend/app/services/: content_service.py  feed_service.py  source_service.py
backend/app/tasks/: __init__.py  celery_app.py  ingest.py
backend/scripts/: seed.py
backend/tests/: __init__.py  conftest.py  test_health.py
backend/tests/test_api/: __init__.py  test_content.py  test_feed.py  test_ingest.py  test_sources.py
backend/tests/test_ingestion/: __init__.py  test_arxiv.py  test_github.py  test_huggingface.py
backend/tests/test_ingestion/fixtures/: arxiv_response.xml  github_trending.json  hf_models.json  hf_papers.json
backend/tests/test_scoring/: __init__.py  test_ranker.py
docs/: api-reference.md  data-model.md  system-design.md
docs/adr/: 002-tech-stack.md  (+2 more)
frontend/: index.html  package-lock.json  package.json
plans/: ROADMAP.md  phase-1-mvp.md
(+13 files in other folders)
